# Anytime-Development

./: .clang-format  .clangd  .dockerignore  .gitignore  .gitmodules  ARTIFACT_EVALUATION.md  EXPERIMENTAL_PLAN.md  EXPERIMENTS_PACKAGE_SETUP.md  LICENSE  MONTE_CARLO_EXPERIMENTS_READY.md  README.md  REFACTORING_SUMMARY.md  auto_install.sh  cyclone_dds_config.xml  docker-compose.yml  evaluation.sh  evaluation_batch.sh  evaluation_monte_carlo.sh  evaluation_plotter.py  evaluation_plotter_monte_carlo.py  evaluation_plotter_yolo.py  evaluation_plotter_yolo_score.py  evaluation_yolo.sh  evaluation_yolo_score.sh  launch_experiment.sh  requirements.txt  run_monte_carlo_experiments.sh  tasks.json  test_anytime_tracepoint.sh
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/jetson/: Dockerfile  devcontainer.json
.devcontainer/linux/: Dockerfile  devcontainer.json
.devcontainer/linux-no-hardware/: Dockerfile  devcontainer.json
artifact-evaluation-plan/: 01-fix-hardcoded-paths.md  02-gpu-sync-fix.md  03-cpp-correctness-bugs.md  04-unit-tests.md  05-smoke-test-quick-experiments.md  06-bash-wrapper-scripts.md  07-docker-compose.md  08-code-quality-metadata.md  09-documentation.md  10-artifact-evaluation-guide.md  11-final-polish.md  README.md
experiments/interference/: QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  evaluate_interference.py  generate_configs.py  run_interference_experiments.sh  run_quick.sh  test_single_config.sh
experiments/interference/configs/: batch_16384_proactive_single_server.yaml  batch_1_proactive_single_server.yaml  batch_262144_proactive_multi_server.yaml  batch_262144_proactive_single_server.yaml  batch_262144_reactive_multi_server.yaml  batch_262144_reactive_single_server.yaml  batch_4096_reactive_single_server.yaml  batch_64_proactive_multi_server.yaml  batch_64_proactive_single_interference.yaml  batch_65536_proactive_single_server.yaml  batch_65536_reactive_single_server.yaml
experiments/monte_carlo/: README.md  SETUP_COMPLETE.md  evaluate_monte_carlo.py  generate_configs.py  run_monte_carlo_experiments.sh  run_quick.sh  test_single_config.sh
experiments/monte_carlo/configs/: batch_16384_proactive_multi_server.yaml  batch_16384_reactive_multi_server.yaml  batch_16384_reactive_single_server.yaml  batch_1_reactive_multi_server.yaml  batch_1_reactive_single_server.yaml  batch_262144_proactive_single_client.yaml  batch_4096_proactive_multi_server.yaml  batch_4096_proactive_single_server.yaml  batch_4096_reactive_multi_server.yaml  batch_64_proactive_single_server.yaml  batch_64_reactive_multi_server.yaml  batch_64_reactive_single_server.yaml  batch_65536_proactive_multi_server.yaml  batch_65536_reactive_multi_server.yaml
experiments/yolo/: 0_generate_baseline_configs.py  0_test_setup.sh  1_collect_baseline.sh  2a_analyze_quality.py  2b_analyze_blocks.py  3_measure_throughput.sh  4_analyze_throughput.py  5_generate_configs.py  6_run_experiments.sh  6a_test_single_config.sh  7_analyze_cancellation.py  QUICK_REFERENCE.md  README.md  SETUP_COMPLETE.md  analyze_blocks.py  analyze_quality.py  analyze_runtime.py  evaluate_yolo.py  run_phase1_baseline.sh  run_phase3_max_throughput.sh  test_single_config.sh  verify_tracepoints.sh
experiments/yolo/configs/: phase1_baseline.yaml  phase3_max_throughput.yaml
legacy/packages_old/anytime_action/: CMakeLists.txt  package.xml
legacy/packages_old/anytime_action/launch/: action_client.launch.py  action_server.launch.py
legacy/packages_old/anytime_action/src/: anytime_client.cpp  anytime_server.cpp
legacy/packages_old/anytime_custom/: CMakeLists.txt  package.xml
legacy/packages_old/anytime_custom/include/anytime_custom/: anytime_node.hpp
legacy/packages_old/anytime_custom/launch/: anytime_custom.launch.py
legacy/packages_old/anytime_custom/src/: anytime_main.cpp  anytime_node.cpp
legacy/packages_old/anytime_interfaces/: CMakeLists.txt  package.xml
legacy/packages_old/anytime_interfaces/action/: Anytime.action
legacy/packages_old/waitable_test/: CMakeLists.txt  README.md  package.xml
legacy/packages_old/waitable_test/include/waitable_test/: basic_publisher.hpp  cuda_waitable.hpp
legacy/packages_old/waitable_test/launch/: launch_publisher_subscription.launch.py
legacy/packages_old/waitable_test/src/: basic_publisher.cpp  cuda_waitable.cpp
legacy/packages_old/yolo_action/: CMakeLists.txt  package.xml
legacy/packages_old/yolo_action/include/yolo_action/: anytime_action.hpp  anytime_client.hpp  anytime_server.hpp  yolo_model.hpp
legacy/packages_old/yolo_action/launch/: action_client.launch.py  action_server.launch.py
legacy/packages_old/yolo_action/src/: anytime_client.cpp  anytime_server.cpp  yolo_model.cpp
legacy/packages_old/yolo_rt/: CMakeLists.txt  package.xml
legacy/packages_old/yolo_rt/launch/: camera.launch.py
legacy/packages_old/yolo_rt/src/: main.cpp  yolo_main.cpp  yolo_model.cpp
packages_old/anytime_action/: CMakeLists.txt
packages_old/anytime_action/launch/: action_server.launch.py
packages_old/anytime_action/src/: anytime_client.cpp
packages_old/anytime_interfaces/: CMakeLists.txt
packages_old/waitable_test/: package.xml
packages_old/waitable_test/launch/: launch_publisher_subscription.launch.py
packages_old/waitable_test/src/: cuda_waitable.cpp
packages_old/yolo_action/: CMakeLists.txt  package.xml
packages_old/yolo_rt/launch/: camera.launch.py
packages_old/yolo_rt/scripts/: yolo.py
packages_old/yolo_rt/src/: yolo_model.cpp  yolo_node.cpp
scripts/: check_yolo_prerequisites.sh  collect_figures.sh  reproduce_figure.sh  run_all.sh  smoke_test.sh  warmup_yolo_engines.sh
(+7 files in other folders)
